fix layout on smaller breakpoints

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -20,21 +20,45 @@ a {
   position: relative;
 }
 
-main {
-  background: $colour--background;
-  padding-top: 20rem;
-
-  img {
-    width: 100%;
+@media (max-width: 768px) {
+  .content {
+    top: 450px;
   }
 }
 
 
+main {
+  background: $colour--background;
+}
+
+@media (min-width: 768px) {
+  main {
+    padding-top: 20rem;
+  }
+}
+
 .hero-image {
-  position:absolute;
-  top:-55rem;
-  right:0;
-  width: 70%;
+  display: none;
+
+  img {
+    position:absolute;
+    top:-55rem;
+    right:0;
+    width: 100%;
+    max-width: 200px;
+  }
+}
+
+@media (min-width: 600px) {
+  .hero-image {
+    display: block;
+
+    img {
+      top:-55rem;
+      right:2rem;
+      max-width: 300px;
+    }
+  }
 }
 
 .page-heading {
